# frappe-nix

./: README.md  flake.nix
lib/: bench.nix  frappe-init.sh  frappe-presets.json  init.nix  overrides.nix  python.nix  scripts.nix
modules/: containers.nix  devenv.nix  flake-module.nix  nixos.nix
multi-tenancy-refactor/: availabe-frappe-envs.nix  current-module-options.nix  plan.md  sample-site-config.json  target-module-options.nix
templates/bench/: .gitignore  README.md  flake.nix  pyproject.toml
templates/bench/sites/: common_site_config.json
tests/: migrate-rollback.nix
